--- a/spi/build.gradle
+++ b/spi/build.gradle
@@ -3,6 +3,7 @@ jar { manifest { name = "Qi4j Core SPI"}}
 
 dependencies {
   compile(project(':org.qi4j.core:org.qi4j.core.api'))
+  compile(project(":org.qi4j.libraries:org.qi4j.library.locking"))
   testCompile(libraries.junit)
 
 }
